syntax = "proto3";
package api;

option go_package = "serviceweaver/main";

import "director.proto";

message Movie {
  string name = 1;
  int32 id = 2;
  Director director = 3;
}

service MovieService {
  rpc GetMovieById (GetMovieByIdRequest) returns (GetMovieResponse) {}
  rpc GetMovieByDirector (GetMovieByDirectorRequest) returns (GetMovieResponse) {}
}

message GetMovieByIdRequest {
  int32 id = 1;
}

message GetMovieByDirectorRequest {
  int32 id = 1;
}

message GetMovieResponse {
  repeated Movie Data = 1;
}
